# MOCSCTF2024-Writeup

./: README.md
crypto/one-time-pad-1/writeup/: solve.py
crypto/one-time-pad-2/writeup/: solve.py
crypto/one-time-pad-3/writeup/: solve.py
crypto/one-time-pad-4/writeup/: solve.py  writeup.txt
crypto/secret-shredded-paper/writeup/: writeup.py
crypto/symbol/writeup/: Writeup.txt
crypto/what-is-the-seed/writeup/: secret.py  solve.py
forensic/easy-pcap-1/writeup/: writeup.docx
forensic/easy-pcap-2/writeup/: writeup.docx
forensic/long-query/writeup/: Readme.md  png_hex.txt
forensic/secret-agent/writeup/: Readme.md
misc/d1sc0rd/: README.md
misc/d1sc0rd/src/: Readme.md
misc/d1sc0rd/writeup/: writeup.md
misc/moving-average/: challenge.txt
misc/moving-average/writeup/: solve.py  writeup.txt
osint/leaked-credential/: chall.txt
osint/openai-art/: chall.txt
pwn/blackd00r/: exploit.py
pwn/echov2/: solve.py
pwn/just-pwn-it/: README.md
pwn/shh2024/: canary.txt  solve.py
reverse/traceme-1/: chall.txt
reverse/traceme-2/: chall.txt
reverse/traceme-3/: chall.txt
web/easyjs/: description.txt  docker-compose.yml  package-lock.json  package.json
web/easynote/: Dockerfile  description.txt  docker-compose.yml  index.js  package-lock.json  package.json
web/logmein/: challenge.json  docker-compose.yml  flag.txt  solve.txt
web/phprevenge/: Dockerfile  docker-compose.yml
web/rust-shop/: Cargo.toml  Dockerfile  description.txt  docker-compose.yml
web/rust-shop/src/: main.rs
web/rust-shop/static/: index.html
web/rust-shop/writeup/: exp.py
(+34 files in other folders)
