[package]
name = "rust-shop"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "rust-shop"
path = "src/main.rs"
